--- a/package.json
+++ b/package.json
@@ -1,48 +1,30 @@
 {
-  "name": "np-bingo",
-  "version": "0.1.0",
-  "homepage": "http://dev.tadjhbrooks.com/np-bingo/",
+  "name": "@nopixel/np-bingo",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
+  "version": "1.0.0",
+  "description": "http://dev.tadjhbrooks.com/np-bingo/",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "cd packages/np-bingo-server && yarn start",
+    "client": "cd packages/np-bingo-client && yarn start",
+    "start": "concurrently \"yarn server\" \"yarn client\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TadjhBrooks/np-bingo.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TadjhBrooks/np-bingo/issues"
   },
-  "devDependencies": {
-    "@types/lz-string": "^1.3.34"
-  }
+  "homepage": "https://github.com/TadjhBrooks/np-bingo#readme",
+  "dependencies": {
+    "concurrently": "^6.0.0"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
