--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "@nopixel/np-bingo",
+  "name": "np-bingo",
   "private": true,
   "version": "1.0.0",
   "description": "http://dev.tadjhbrooks.com/np-bingo/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd packages/np-bingo-server && yarn start",
-    "client": "cd packages/np-bingo-client && yarn start",
-    "start": "concurrently \"yarn server\" \"yarn client\""
+    "server": "yarn workspace @np-bingo/server start",
+    "client": "yarn workspace @np-bingo/client start",
+    "start": "run-p server client",
+    "common-build": "yarn workspace @np-bingo/common build",
+    "server-build": "yarn workspace @np-bingo/server build",
+    "client-build": "yarn workspace @np-bingo/client build",
+    "build": "run-s common-build server-build client-build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TadjhBrooks/np-bingo.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tadjh Brooks",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TadjhBrooks/np-bingo/issues"
   },
   "homepage": "https://github.com/TadjhBrooks/np-bingo#readme",
-  "dependencies": {
-    "concurrently": "^6.0.0"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   },
   "workspaces": [
     "packages/*"
