--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,10 +7,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@np-bingo/common": "^1.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@np-bingo/common": "^1.0.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
@@ -52,6 +52,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "use-reducer-logger": "^1.0.2"
   }
 }
