--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "description": "http://dev.tadjhbrooks.com/np-bingo/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "yarn workspace @np-bingo/server start",
-    "client": "yarn workspace @np-bingo/client start",
-    "start": "run-p server client",
+    "server-test": "echo \"Error: no test specified\" && exit 1",
+    "client-test": "yarn workspace @np-bingo/client test",
+    "test": "run-p client-test",
+    "server-start": "yarn workspace @np-bingo/server start",
+    "client-start": "yarn workspace @np-bingo/client start",
+    "start": "run-p server-start client-start",
     "common-build": "yarn workspace @np-bingo/common build",
     "server-build": "yarn workspace @np-bingo/server build",
     "client-build": "yarn workspace @np-bingo/client build",
