--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -61,6 +61,7 @@
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-storyshots": "^6.2.8",
     "@storybook/node-logger": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.8",
@@ -72,5 +73,8 @@
     "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
