--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "server-test": "echo \"Error: no test specified\" && exit 1",
     "client-test": "yarn workspace @np-bingo/client test",
     "test": "run-p client-test",
+    "server-dev": "yarn workspace @np-bingo/server dev",
     "server-start": "yarn workspace @np-bingo/server start",
     "client-start": "yarn workspace @np-bingo/client start",
-    "start": "run-p server-start client-start",
+    "start": "run-p server-dev client-start",
     "common-build": "yarn workspace @np-bingo/common build",
     "server-build": "yarn workspace @np-bingo/server build",
     "client-build": "yarn workspace @np-bingo/client build",
