--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,9 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "test-deploy": "heroku local web",
+    "deploy": "git push heroku main"
   },
   "keywords": [],
   "license": "MIT",
@@ -20,10 +22,12 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.12.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/serve-favicon": "^2.5.2",
     "@np-bingo/types": "^1.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
