--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -71,6 +71,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "use-reducer-logger": "^1.0.2",
     "typescript": "^4.2.3"
   },
   "resolutions": {
