--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server-dev": "yarn workspace @np-bingo/server dev",
     "server-start": "yarn workspace @np-bingo/server start",
     "client-start": "yarn workspace @np-bingo/client start",
-    "start": "run-p server-dev client-start",
+    "start": "run-p server-start client-start",
     "common-build": "yarn workspace @np-bingo/common build",
     "server-build": "yarn workspace @np-bingo/server build",
     "client-build": "yarn workspace @np-bingo/client build",
