--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -76,8 +75,14 @@
     "autoprefixer": "^9",
     "postcss": "^7",
     "storybook-tailwind-dark-mode": "^1.0.9",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
+  },
+  "workspaces": {
+    "nohoist": [
+      "tailwindcss"
+    ]
   },
   "resolutions": {
     "babel-loader": "8.1.0"
