--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -79,6 +79,11 @@
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
   },
+  "workspaces": {
+    "nohoist": [
+      "tailwindcss"
+    ]
+  },
   "resolutions": {
     "babel-loader": "8.1.0"
   },
