--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/tailwindcss",
+      "**/@tailwindcss/**"
+    ]
+  },
   "resolutions": {
     "babel-loader": "8.1.0"
   },
