--- a/package.json
+++ b/package.json
@@ -32,15 +32,9 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ],
-    "nohoist": [
-      "**/tailwindcss",
-      "**/@tailwindcss/**"
-    ]
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "resolutions": {
     "babel-loader": "8.1.0"
   },
