--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "author": "Tadjh Brooks",
   "dependencies": {
+    "@craco/craco": "^6.1.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@np-bingo/common": "^1.0.3",
@@ -57,7 +58,6 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.1.2",
     "@np-bingo/types": "^1.0.3",
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
@@ -75,7 +75,7 @@
     "storybook-tailwind-dark-mode": "^1.0.9",
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
   },
