--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -75,7 +75,7 @@
     "storybook-tailwind-dark-mode": "^1.0.9",
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
   },
