--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.0.0",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -72,9 +73,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "storybook-tailwind-dark-mode": "^1.0.9",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "storybook-tailwind-dark-mode": "^1.0.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.2.3",
     "use-reducer-logger": "^1.0.2"
