--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,8 +6,5 @@
   "types": "index.d.ts",
   "license": "MIT",
   "author": "Tadjh Brooks",
-  "typeScriptVersion": "4.2",
-  "scripts": {
-    "publish": "npm publish"
-  }
+  "typeScriptVersion": "4.2"
 }
