Fix publish script namespace

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "run-s common-build server-build client-build",
     "publish-types": "yarn workspace @np-bingo/types publish",
     "publish-common": "yarn workspace @np-bingo/common publish",
-    "publish": "run-p publish-types publish-common",
+    "publish-deps": "run-p publish-types publish-common",
     "storybook": "yarn workspace @np-bingo/client storybook"
   },
   "repository": {
