--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -60,7 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@np-bingo/types": "^1.4.0",
+    "@np-bingo/types": "^1.4.2",
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
@@ -79,8 +79,7 @@
     "postcss": "^7",
     "storybook-tailwind-dark-mode": "^1.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
-    "typescript": "^4.2.3",
-    "use-reducer-logger": "^1.0.2"
+    "typescript": "^4.2.3"
   },
   "resolutions": {
     "babel-loader": "8.1.0"
