--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -68,6 +68,7 @@
     "@storybook/node-logger": "^6.2.8",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.8",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/canvas-confetti": "^1.4.2",
     "@types/jest": "^26.0.15",
     "@types/lz-string": "^1.3.34",
