--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "canvas-confetti": "^1.4.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
+    "react-aria": "^3.9.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
