--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,7 +16,6 @@
     "canvas-confetti": "^1.4.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
-    "react-aria": "^3.9.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -45,6 +44,14 @@
         "rules": {
           "import/no-anonymous-default-export": "off"
         }
+      },
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
       }
     ]
   },
@@ -62,13 +69,13 @@
   },
   "devDependencies": {
     "@np-bingo/types": "^1.4.2",
-    "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-links": "^6.2.8",
-    "@storybook/addon-storyshots": "^6.2.8",
-    "@storybook/node-logger": "^6.2.8",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.8",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/addon-storyshots": "^6.3.8",
+    "@storybook/node-logger": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
     "@testing-library/react-hooks": "^7.0.1",
     "@types/canvas-confetti": "^1.4.2",
     "@types/jest": "^26.0.15",
