--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server-start": "yarn workspace @np-bingo/server start",
     "client-start": "yarn workspace @np-bingo/client start",
     "start": "run-p server-start client-start",
+    "start-dev": "run-p server-dev client-start",
     "common-build": "yarn workspace @np-bingo/common build",
     "server-build": "yarn workspace @np-bingo/server build",
     "client-build": "yarn workspace @np-bingo/client build",
