--- a/packages/client/.gitignore
+++ b/packages/client/.gitignore
@@ -22,3 +22,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/cypress/integration/1-getting-started
+/cypress/integration/2-advanced-examples
