--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,9 +9,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@np-bingo/common": "^1.4.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "canvas-confetti": "^1.4.0",
     "dotenv": "^8.2.0",
@@ -29,12 +26,15 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "TAILWIND_MODE=watch start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --spec \"cypress/integration/app/**/*\""
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ],
     "overrides": [
       {
@@ -76,7 +76,12 @@
     "@storybook/node-logger": "^6.3.8",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
+    "@testing-library/cypress": "^8.0.1",
+    "@testing-library/dom": "^8.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^7.0.1",
+    "@testing-library/user-event": "^12.1.10",
     "@types/canvas-confetti": "^1.4.2",
     "@types/jest": "^26.0.15",
     "@types/lz-string": "^1.3.34",
@@ -85,6 +90,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9",
+    "cypress": "^8.3.1",
+    "eslint-plugin-cypress": "^2.11.3",
     "postcss": "^7",
     "storybook-tailwind-dark-mode": "^1.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
