--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "@np-bingo/common": "^1.4.0",
     "axios": "^0.21.1",
     "canvas-confetti": "^1.4.0",
+    "cypress": "8.4.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -90,7 +91,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9",
-    "cypress": "^8.3.1",
+    "cypress": "8.4.0",
     "eslint-plugin-cypress": "^2.11.3",
     "postcss": "^7",
     "storybook-tailwind-dark-mode": "^1.0.11",
