--- a/packages/client/cypress/tsconfig.json
+++ b/packages/client/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["es2015", "dom"],
-    "types": ["cypress", "@testing-library/cypress"]
+    "types": ["node", "cypress", "@testing-library/cypress"]
   },
   "include": ["**/*.ts"]
 }
