--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,7 +29,9 @@
     "storybook": "TAILWIND_MODE=watch start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run --spec \"cypress/integration/app/**/*\""
+    "cypress:run": "cypress run",
+    "cypress:test": "start-server-and-test start ORIGIN cypress:run",
+    "play:run": "node ./cypress/multiplayer/play.js"
   },
   "eslintConfig": {
     "extends": [
@@ -94,6 +96,7 @@
     "cypress": "8.4.0",
     "eslint-plugin-cypress": "^2.11.3",
     "postcss": "^7",
+    "start-server-and-test": "^1.14.0",
     "storybook-tailwind-dark-mode": "^1.0.11",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.2.3"
