--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "socket.io-client": "^4.0.0",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
