--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@np-bingo/common": "^1.4.3",
+    "@socket.io/admin-ui": "^0.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
